package game.model;

public class Key extends Artifact implements CollectibleItem {
    public Key() {
    }

    public Key(int id) {
        super();
    }

}
