@startuml

title __MODEL's Class Diagram__\n

  package game {
    package game.model {
      class Artifact {
          - commands : List<String>
          {static} - id : int
          # id_new : int
          + Artifact()
          + getId()
          + getName()
          + toString()
      }
    }
  }
  

  package game {
    package game.model {
      interface CollectibleItem {
          + isCollectible()
      }
    }
  }
  

  package game {
    package game.model {
      class Door {
          + Door()
          + Door()
      }
    }
  }
  

  package game {
    package game.model {
      interface ILocalizable {
          {abstract} + setPosition()
      }
    }
  }
  

  package game {
    package game.model {
      class Key {
          + Key()
          + Key()
      }
    }
  }
  

  package game {
    package game.model {
      class Player {
          - horizontal : int
          - vertical : int
          - ID : int
          - currentGameBoard : int
          - name : String
          - artifacts : List<CollectibleItem>
          + getHorizontal()
          + getVertical()
          + getCurrentGameBoard()
          + setCurrentGameBoard()
          + Player()
          + getName()
          + getID()
          + Player()
          + collect()
          + setPosition()
          + getArtifacts()
      }
    }
  }
  

  package game {
    package game.model {
      class Tree {
          + Tree()
          + Tree()
      }
    }
  }
  

  Door -up-|> Artifact
  Door o-- Key : doorKey
  Key -up-|> CollectibleItem
  Key -up-|> Artifact
  Player -up-|> ILocalizable
  Tree -up-|> Artifact


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
